--- a/branches/Unix/Utils/TileResampler/TilesetResampler.lpi
+++ b/branches/Unix/Utils/TileResampler/TilesetResampler.lpi
@@ -1,21 +1,18 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="9"/>
+    <Version Value="7"/>
     <General>
       <MainUnit Value="0"/>
-      <UseXPManifest Value="True"/>
+      <TargetFileExt Value=".exe"/>
       <Icon Value="0"/>
-      <ActiveWindowIndexAtStart Value="0"/>
+      <UseXPManifest Value="True"/>
+      <ActiveEditorIndexAtStart Value="0"/>
     </General>
     <VersionInfo>
       <Language Value=""/>
       <CharSet Value=""/>
-      <StringTable ProductVersion=""/>
     </VersionInfo>
-    <BuildModes Count="1">
-      <Item1 Name="default" Default="True"/>
-    </BuildModes>
     <PublishOptions>
       <Version Value="2"/>
       <IgnoreBinaries Value="False"/>
@@ -33,15 +30,13 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="4">
+    <Units Count="6">
       <Unit0>
         <Filename Value="TilesetResampler.lpr"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="1"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
         <CursorPos X="1" Y="15"/>
-        <SyntaxHighlighter Value="Delphi"/>
+        <TopLine Value="1"/>
+        <EditorIndex Value="1"/>
         <UsageCount Value="24"/>
         <Loaded Value="True"/>
       </Unit0>
@@ -52,167 +47,151 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
-        <IsVisibleTab Value="True"/>
+        <CursorPos X="1" Y="1"/>
+        <TopLine Value="1"/>
         <EditorIndex Value="0"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="167"/>
-        <CursorPos X="1" Y="32"/>
         <UsageCount Value="24"/>
         <Loaded Value="True"/>
-        <LoadedDesigner Value="True"/>
       </Unit1>
       <Unit2>
         <Filename Value="../../Common/ZLIBEX.PAS"/>
         <UnitName Value="ZLibEx"/>
-        <EditorIndex Value="2"/>
-        <WindowIndex Value="0"/>
+        <CursorPos X="47" Y="1006"/>
         <TopLine Value="988"/>
-        <CursorPos X="16" Y="1004"/>
+        <EditorIndex Value="2"/>
         <UsageCount Value="11"/>
         <Loaded Value="True"/>
       </Unit2>
       <Unit3>
-        <Filename Value="../../../../../../Downloads/ZLIBEX.PAS"/>
+        <Filename Value="../../../../Downloads/ZLIBEX.PAS"/>
         <UnitName Value="ZLibEx"/>
-        <TopLine Value="81"/>
         <CursorPos X="1" Y="1"/>
+        <TopLine Value="81"/>
         <UsageCount Value="10"/>
       </Unit3>
+      <Unit4>
+        <Filename Value="../../../../lazarus/lcl/include/control.inc"/>
+        <CursorPos X="1" Y="2228"/>
+        <TopLine Value="2208"/>
+        <UsageCount Value="10"/>
+      </Unit4>
+      <Unit5>
+        <Filename Value="../../Common/KromUtils.pas"/>
+        <UnitName Value="KromUtils"/>
+        <CursorPos X="163" Y="488"/>
+        <TopLine Value="463"/>
+        <UsageCount Value="10"/>
+      </Unit5>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="25" HistoryIndex="24">
       <Position1>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="10" Column="40" TopLine="3"/>
+        <Caret Line="186" Column="1" TopLine="166"/>
       </Position1>
       <Position2>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="129" Column="37" TopLine="113"/>
+        <Caret Line="187" Column="1" TopLine="167"/>
       </Position2>
       <Position3>
-        <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="1" Column="1" TopLine="1"/>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="189" Column="1" TopLine="169"/>
       </Position3>
       <Position4>
-        <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="49" Column="39" TopLine="41"/>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="190" Column="1" TopLine="170"/>
       </Position4>
       <Position5>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="113" Column="5" TopLine="105"/>
+        <Caret Line="196" Column="57" TopLine="171"/>
       </Position5>
       <Position6>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="116" Column="16" TopLine="111"/>
+        <Caret Line="185" Column="1" TopLine="165"/>
       </Position6>
       <Position7>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="115" Column="6" TopLine="100"/>
+        <Caret Line="186" Column="1" TopLine="166"/>
       </Position7>
       <Position8>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="10" Column="25" TopLine="1"/>
+        <Caret Line="187" Column="1" TopLine="167"/>
       </Position8>
       <Position9>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="113" Column="5" TopLine="103"/>
+        <Caret Line="189" Column="1" TopLine="169"/>
       </Position9>
       <Position10>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="111" Column="45" TopLine="95"/>
+        <Caret Line="190" Column="1" TopLine="170"/>
       </Position10>
       <Position11>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="112" Column="41" TopLine="96"/>
+        <Caret Line="191" Column="1" TopLine="171"/>
       </Position11>
       <Position12>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="10" Column="18" TopLine="1"/>
+        <Caret Line="192" Column="1" TopLine="172"/>
       </Position12>
       <Position13>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="111" Column="45" TopLine="95"/>
+        <Caret Line="212" Column="1" TopLine="177"/>
       </Position13>
       <Position14>
-        <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="285" Column="1" TopLine="39"/>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="187" Column="20" TopLine="177"/>
       </Position14>
       <Position15>
-        <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="1" Column="1" TopLine="1"/>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="39" Column="48" TopLine="23"/>
       </Position15>
       <Position16>
-        <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="92" Column="2" TopLine="76"/>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="160" Column="8" TopLine="130"/>
       </Position16>
       <Position17>
-        <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="595" Column="13" TopLine="579"/>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="177" Column="146" TopLine="148"/>
       </Position17>
       <Position18>
-        <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="596" Column="9" TopLine="579"/>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="165" Column="48" TopLine="146"/>
       </Position18>
       <Position19>
-        <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="594" Column="1" TopLine="579"/>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="166" Column="3" TopLine="146"/>
       </Position19>
       <Position20>
-        <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="595" Column="4" TopLine="579"/>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="191" Column="34" TopLine="167"/>
       </Position20>
       <Position21>
-        <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="867" Column="13" TopLine="851"/>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="174" Column="21" TopLine="154"/>
       </Position21>
       <Position22>
-        <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="880" Column="13" TopLine="864"/>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="121" Column="48" TopLine="102"/>
       </Position22>
       <Position23>
-        <Filename Value="../../Common/ZLIBEX.PAS"/>
-        <Caret Line="898" Column="14" TopLine="882"/>
+        <Filename Value="Unit1.pas"/>
+        <Caret Line="130" Column="21" TopLine="110"/>
       </Position23>
       <Position24>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="9" Column="38" TopLine="1"/>
+        <Caret Line="69" Column="22" TopLine="49"/>
       </Position24>
       <Position25>
         <Filename Value="Unit1.pas"/>
-        <Caret Line="10" Column="18" TopLine="1"/>
+        <Caret Line="91" Column="19" TopLine="71"/>
       </Position25>
-      <Position26>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="176" Column="3" TopLine="152"/>
-      </Position26>
-      <Position27>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="148" Column="5" TopLine="136"/>
-      </Position27>
-      <Position28>
-        <Filename Value="Unit1.pas"/>
-        <Caret Line="9" Column="39" TopLine="1"/>
-      </Position28>
-      <Position29>
-        <Filename Value="TilesetResampler.lpr"/>
-        <Caret Line="1" Column="1" TopLine="1"/>
-      </Position29>
-      <Position30>
-        <Filename Value="TilesetResampler.lpr"/>
-        <Caret Line="15" Column="1" TopLine="1"/>
-      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
-    <Version Value="9"/>
+    <Version Value="8"/>
     <SearchPaths>
-      <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="../../Common"/>
+      <IncludeFiles Value="$(ProjOutDir)/"/>
+      <OtherUnitFiles Value="../../Common/"/>
     </SearchPaths>
-    <Parsing>
-      <SyntaxOptions>
-        <UseAnsiStrings Value="False"/>
-      </SyntaxOptions>
-    </Parsing>
     <Other>
       <CompilerMessages>
         <UseMsgFile Value="True"/>
