--- a/KaM_Remake.lpi
+++ b/KaM_Remake.lpi
@@ -885,8 +885,8 @@
     <Version Value="8"/>
     <PathDelim Value="\"/>
     <SearchPaths>
-      <IncludeFiles Value="Common\;Common\zlib\;Common\pngimage\;Common\Overbyte ICS\;$(ProjOutDir)\"/>
-      <OtherUnitFiles Value="Common\;Common\zlib\;Common\pngimage\;Common\Overbyte ICS\"/>
+      <IncludeFiles Value="Common\;Common\zlib\;Common\pngimage\;Common\Overbyte ICS\;Common\LNet;$(ProjOutDir)\"/>
+      <OtherUnitFiles Value="Common\;Common\zlib\;Common\pngimage\;Common\Overbyte ICS\;Common\LNet"/>
     </SearchPaths>
     <Parsing>
       <SyntaxOptions>
