--- a/trunk/Utils/HTTPTest/KaMHTTPTest.cfg
+++ b/trunk/Utils/HTTPTest/KaMHTTPTest.cfg
@@ -33,7 +33,7 @@
 -K$00400000
 -LE"c:\program files (x86)\borland\delphi6\Projects\Bpl"
 -LN"c:\program files (x86)\borland\delphi6\Projects\Bpl"
--U"..\..\Common\Overbyte ICS"
--O"..\..\Common\Overbyte ICS"
--I"..\..\Common\Overbyte ICS"
--R"..\..\Common\Overbyte ICS"
+-U"..\..\Common\Overbyte ICS;..\..\"
+-O"..\..\Common\Overbyte ICS;..\..\"
+-I"..\..\Common\Overbyte ICS;..\..\"
+-R"..\..\Common\Overbyte ICS;..\..\"
